fixed library player title display on small screens

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -180,6 +180,7 @@ app-root {
       .mat-tab-labels {
         justify-content: center;
         align-items: center;
+        padding-left: 0;
       }
       .mat-tab-label {
         font-size: 0;
